[package]
name    = "yaml2json"
version = "0.1.0"
authors = ["Anton Dutov <anton.dutov@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
debug = false
rpath = false
opt-level = 3
incremental   = false
codegen-units = 1
debug-assertions = false
panic = 'abort'

[dependencies]
serde      = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"